[package]
name = "rust-hashgraph"
version = "0.1.0"
authors = ["Jay Butera <buterajay@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode = "1.3.3"
blake2 = "0.10.4"
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
serde-big-array = "0.4.1" # https://github.com/serde-rs/serde/issues/631
thiserror = "1.0.37"

[dev-dependencies]
hex-literal = "0.3.4"
